# swagger/ballog.yaml
@@ -261,7 +261,7 @@ paths:
                 type: "string"
               content:
                 type: "string"
-              imageUrls:
+              imgUrls:
                 type: "array"
                 items:
                   type: "string"
@@ -532,7 +532,7 @@ paths:
                           type: "integer"
                         commentCount:
                           type: "integer"
-                        imageUrls:
+                        imgUrls:
                           type: "array"
                           items:
                             type: "string"
@@ -874,15 +874,18 @@ paths:
                     type: "string"
                   body:
                     type: "string"
-                  imageUrls:
+                  imgUrls:
                     type: "array"
                     items:
                       type: "string"
+                  match_id:
+                    type: "integer"
                 required:
                   - type
                   - title
                   - body
-                  - imageUrls
+                  - imgUrls
+                  - match_id
               - type: "object"
                 properties:
                   type:
@@ -893,15 +896,18 @@ paths:
                     format: "int64"
                   playerRecord:
                     type: "string"
-                  imageUrls:
+                  imgUrls:
                     type: "array"
                     items:
                       type: "string"
+                  match_id:
+                    type: "integer"
                 required:
                   - type
                   - playerId
                   - playerRecord
-                  - imageUrls
+                  - imgUrls
+                  - match_id
       responses:
         200:
           description: "성공적인 응답"
@@ -948,15 +954,18 @@ paths:
                     type: "string"
                   body:
                     type: "string"
-                  imageUrls:
+                  imgUrls:
                     type: "string"
                     items:
                       type: "string"
+                  match_id:
+                    type: "integer"
                 required:
                   - type
                   - title
                   - body
-                  - imageUrls
+                  - imgUrls
+                  - match_id
               - type: "object"
                 properties:
                   type:
@@ -967,15 +976,18 @@ paths:
                     format: "int64"
                   playerRecord:
                     type: "string"
-                  imageUrls:
+                  imgUrls:
                     type: "array"
                     items:
                       type: "string"
+                  match_id:
+                    type: "integer"
                 required:
                   - type
                   - playerId
                   - playerRecord
-                  - imageUrls
+                  - imgUrls
+                  - match_id
       responses:
         200:
           description: "성공적인 응답"
@@ -994,7 +1006,140 @@ paths:
               result:
                 type: "integer"
                 example: 0
-
+    get:
+      tags:
+        - "board"
+      summary: "게시물 조회"
+      description: "제공된 post_id 및 타입에 따라 기존 게시물을 조회합니다."
+      security:
+        - Authorization: []
+      parameters:
+        - name: "post_id"
+          in: "path"
+          required: true
+          type: "string"
+      responses:
+        200:
+          description: "성공적인 응답"
+          schema:
+            type: "object"
+            properties:
+              isSuccess:
+                type: "boolean"
+                example: true
+              code:
+                type: "string"
+                example: "200"
+              message:
+                type: "string"
+                example: "success!"
+              result:
+                type: "object"
+                properties:
+                  title:
+                    type: "string"
+                    example: "string"
+                  body:
+                    type: "string"
+                    example: "string"
+                  created_at:
+                    type: "string"
+                    format: "date-time"
+                    example: "2024-08-11T08:30:14.000Z"
+                  updated_at:
+                    type: "string"
+                    format: "date-time"
+                    example: "2024-08-11T08:34:35.000Z"
+                  author:
+                    type: "string"
+                    example: "테스터1"
+                  user_id:
+                    type: "string"
+                    example: "test1"
+                  match_id:
+                    type: "integer"
+                    example: 0
+                  match_info:
+                    type: "object"
+                    properties:
+                      match_date:
+                        type: "string"
+                        format: "date-time"
+                        example: "2024-07-26T15:00:00.000Z"
+                      match_id:
+                        type: "integer"
+                        example: 0
+                      home_team_id:
+                        type: "integer"
+                        example: 1
+                      away_team_id:
+                        type: "integer"
+                        example: 2
+                      home_team_name:
+                        type: "string"
+                        example: "삼성"
+                      away_team_name:
+                        type: "string"
+                        example: "LG"
+                      home_team_icon_flag:
+                        type: "string"
+                        nullable: true
+                        example: null
+                      away_team_icon_flag:
+                        type: "string"
+                        nullable: true
+                        example: null
+                      home_team_score:
+                        type: "integer"
+                        example: 0
+                      away_team_score:
+                        type: "integer"
+                        example: 0
+                  comment_list:
+                    type: "array"
+                    items:
+                      type: "object"
+                      properties:
+                        comment_id:
+                          type: "integer"
+                          example: 22
+                        comment_writer:
+                          type: "string"
+                          example: "테스터1"
+                        comment_body:
+                          type: "string"
+                          example: "테스트 댓글"
+                        comment_date:
+                          type: "string"
+                          format: "date-time"
+                          example: "2024-08-11T08:35:43.000Z"
+                  reply_list:
+                    type: "array"
+                    items:
+                      type: "object"
+                      properties:
+                        reply_id:
+                          type: "integer"
+                          example: 11
+                        reply_writer:
+                          type: "string"
+                          example: "테스터1"
+                        reply_body:
+                          type: "string"
+                          example: "답글 테스트"
+                        reply_date:
+                          type: "string"
+                          format: "date-time"
+                          example: "2024-08-11T08:36:14.000Z"
+                        commented_id:
+                          type: "integer"
+                          example: 22
+                  like_count:
+                    type: "integer"
+                    example: 1
+                  has_liked:
+                    type: "boolean"
+                    example: true
     delete:
       tags:
         - "board"
